--- a/overlay-react/src/default/style/timer.css
+++ b/overlay-react/src/default/style/timer.css
@@ -42,7 +42,10 @@
 
   .timer-blue
   .timer-inner {
-  left: 69px;
+    left: 76px;
+    width: 47px;
+    display: flex;
+    justify-content: center;
 }
 
 .timer-red {
@@ -60,7 +63,10 @@
 
 .timer-red
 .timer-inner {
-left: 20px;
+    left: 27px;
+    width: 47px;
+    display: flex;
+    justify-content: center;
 }
 
 
